# libsysinfo

./: .gitignore  CMakeLists.txt  README.md  lexer.c  lexer.h  lexer.re  main.c  system_info.c  system_info.h
